test/2-errors/parse-bare-quo.test
{
  'code' : 1,
  'err' : '''\
test/2-errors/parse-bare-quo.ploy:1:2: parse error: expected sub-expression
    `
     ^
'''
}
